always overflow section list in gradebook2. fixes #9985
previously gradebook2 section list was only set to scroll if there
were more than 15 sections. this caused layout problems for sections
with long names that wrapped onto a second line.

solution is to always overflow the section list if it's taller than
550px.

test plan:
  * create a course with > 15 sections;
  * open gradebook2 in that course and verify that the section list
    is scrollable;
  * view a course with < 15 sections and verify that the section
    list still displays properly.

Reviewed-on: https://gerrit.instructure.com/12963
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/stylesheets/gradebook2.sass
+++ b/app/stylesheets/gradebook2.sass
@@ -366,10 +366,9 @@ $gradebook_checkbox_width: 16px
 
 #section-to-show-menu
   width: 200px
-  &.scrolling
-    overflow-x: hidden
-    overflow-y: auto
-    max-height: 550px
+  overflow-x: hidden
+  overflow-y: auto
+  max-height: 550px
 
 .submission_type_icon
   display: block
